--- a/src/lib/index.css
+++ b/src/lib/index.css
@@ -26,7 +26,7 @@
 
 
 
-
+/* 
 @media screen and (min-width:1px) and (max-width:420px){
     .vue-toast{
         font-size:16px;
@@ -48,6 +48,6 @@
     .vue-toast{
         font-size: 24px;
     } 
-}
+} */
 
 
